Add my player class